--- a/myproject/templates/login.html
+++ b/myproject/templates/login.html
@@ -1,18 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'base_accounts.html' %}
 
-{% load static %}
+{% block title %}Log in to Django Boards{% endblock %}
 
-{% block stylesheet %}
-  <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
-{% endblock %}
-
-{% block body %}
-  <div class="container">
-    <h1 class="text-center logo my-4">
-      <a class="text-white" href="{% url 'home' %}">Django Boards</a>
-    </h1>
-  </div>
-
+{% block content %}
   <div class="row justify-content-center">
     <div class="col-lg-4 col-md-6 col-sm-8">
       <div class="card">
